--- a/templates/order/validation.html
+++ b/templates/order/validation.html
@@ -25,7 +25,7 @@
   </div>
 </div>
 
-<div id="dialog-confirm-del" title="Confirmer la suppression">
+<div id="confirmDel" title="Confirmer la suppression">
   Êtes-vous sûr de vouloir supprimer cette commande ?
 </div>
 
