--- a/templates/base.html
+++ b/templates/base.html
@@ -9,10 +9,10 @@
     <link href="{{ MEDIA_URL }}img/favicon.gif" rel="icon" type="image/gif" />
     <link rel="stylesheet" href="{{ MEDIA_URL }}css/style.css" type="text/css" />
     <link rel="stylesheet" href="{{ MEDIA_URL }}css/form.css" type="text/css" />
-    <link rel="stylesheet" href="{{ MEDIA_URL }}css/redmond/jquery-ui-1.8.10.custom.css" type="text/css" />
+    <link rel="stylesheet" href="{{ MEDIA_URL }}css/redmond/jquery-ui-1.8.12.custom.css" type="text/css" />
     
     <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-1.5.1.min.js"></script>
-    <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-ui-1.8.10.custom.min.js"></script>
+    <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery-ui-1.8.12.custom.min.js"></script>
     <script type="text/javascript" src="{{ MEDIA_URL }}js/jquery.ui.datepicker-fr.js"></script>
     
     <script type="text/javascript" src="{{ MEDIA_URL }}js/base.js"></script>
@@ -60,23 +60,23 @@
                   </a>
                 </li>
               {% endif %}
-              <li>
-                <a href="{% url tab_orders %}" class="{% block menu_order %}{% endblock %}">
-                  Commandes en cours
-                </a>
-              </li>
-            {% else %}{% if user|is_secretary %}
-              <li>
-                <a href="{% url secretary_orders %}" class="{% block menu_secretary_orders %}{% endblock %}">
+            {% endif %}
+            <li>
+              <a href="{% url tab_orders %}" class="{% block menu_order %}{% endblock %}">
+                {% if user|is_secretary %}
                   Gestion des commandes
-                </a>
-              </li>
+                {% else %}
+                  Commandes en cours
+                {% endif %}
+              </a>
+            </li>
+            {% if user|is_secretary %}
               <li>
-                <a href="{% url secretary_budgets %}" class="{% block menu_secretary_budgets %}{% endblock %}">
+                <a href="{% url budgets %}" class="{% block menu_budgets %}{% endblock %}">
                   Gestion des budgets
                 </a>
               </li>
-            {% endif %}{% endif %}
+            {% endif %}
             <li>
               <a href="{% url history %}" class="{% block menu_history %}{% endblock %}">
                 Historique
@@ -92,5 +92,6 @@
     </div>
     
     {% block main %}{% endblock %}
+    <div id="loadingDialog"></div>
 </body>
 </html>
