--- a/templates/budget/form.html
+++ b/templates/budget/form.html
@@ -3,7 +3,7 @@
 {% block header %}Ajout d'un budget{% endblock %}
 
 {% block content %}
-<form action="{% url secretary_budgets %}" method="post">{% csrf_token %}
+<form action="{% url budgets %}" method="post">{% csrf_token %}
     <p class="instructions">
       <em>Les champs marqués d'une étoile sont obligatoires</em>
     </p>
