--- a/templates/product/item.html
+++ b/templates/product/item.html
@@ -20,6 +20,7 @@
   <div id="content_header"><h2>Modification d'un produit</h2></div>
   <form action="{% url product_item product.id %}" method="post">{% csrf_token %}
     <input type="hidden" name="method" value="PUT" />
+    <input type="hidden" name="provider" value="{{ product.provider.id }}" />
     <p class="instructions">
       <em>Les champs marqués d'une étoile sont obligatoires</em>
     </p>
