--- a/templates/tab_orders.html
+++ b/templates/tab_orders.html
@@ -6,15 +6,26 @@
 {% block content %}
 
 <div id="content" style="min-height:0">
-  <div id="content_header"><h2>Commandes équipe {{ user.teammember_set.get.team }}</h2></div>
+  <div id="content_header">
+    {% if user|is_secretary %}
+      <h2>Gestion des commandes</h2>
+    {% else %}
+      <h2>Commandes équipe {{ user.teammember_set.get.team }}</h2>
+    {% endif %}
+  </div>
   
   {% if orders.object_list %}
     <table class="list">
       <thead>
         <th>Date</th>
         <th>Fournisseur</th>
+        {% if user|is_secretary %}
+          <th>Equipe</th>
+          <th>Budget</th>
+        {% endif %}
         <th>Prix</th>
         <th>Statut</th>
+        <th>Cmde N°</th>
         <th>Dernière MAJ</th>
         <th>Action</th>
       </thead>
@@ -24,13 +35,27 @@
           <tr class="{% cycle 'even' 'odd' %}">
             <td>{{ order.date_created|date }}</td>
             <td>{{ order.provider.name }}</td>
+            {% if user|is_secretary %}
+              <td>{{ order.team.name }}</td>
+              <td>{{ order.budget.name }}</td>
+            {% endif %}
             <td>{{ order.price }} €</td>
             <td><b>{{ order.get_status_display }}</b></td>
+            <td>{{ order.number|default:"" }}</td>
             <td>{{ order.last_change|date }}</td>
             <td>
-              <a href="{{ order.get_absolute_url }}" class="zoomin button">
-                Voir détail
-              </a>
+              <a href="{{ order.get_absolute_url }}" class="pencil">Voir détail</a>
+              {% if user|is_secretary %}
+                <a href="{% url set_next_status order.id %}" class="next-status {{ order|dialogClass|default:"" }}">
+                  {% if order.status == 2 and order.budget.budget_type == 1 %}
+                    En attente d'envoi
+                  {% else %}{% if order.status == 2 or order.status == 3 %}
+                    Envoyée au fournisseur
+                  {% else %}{% if order.status == 4 %}
+                    Commande réceptionnée
+                  {% endif %}{% endif %}{% endif %}
+                </a>
+              {% endif %}
             </td>
           </tr>
         {% endfor %}
@@ -43,4 +68,31 @@
     <p>Aucune commande en cours.</p>
   {% endif %}
 </div>
+
+
+
+{# ################## #}
+{#                    #}
+{#      DIALOGS       #}
+{#                    #}
+{# ################## #}
+
+<div id="setDeliveryDate" class="dialog" title="Date de livraison">
+  <div class="form-row">
+    <label for="delivery_date">Date de livraison (jj/mm/aaaa):</label>
+    <div class="cleaner"></div>
+    <input type="text" name="delivery_date" class="datepicker" />
+    <div class="cleaner"></div>
+  </div>
+</div>
+
+<div id="setOrderRef" class="dialog" title="Saisie du N° de commande">
+  <div class="form-row">
+    <label for="number">N° de commande:</label>
+    <div class="cleaner"></div>
+    <input type="text" name="number" />
+    <div class="cleaner"></div>
+  </div>
+</div>
+
 {% endblock %}
