--- a/templates/tab_reports.html
+++ b/templates/tab_reports.html
@@ -4,6 +4,7 @@
 {% block menu_budgets %}selected{% endblock %}
 
 {% block buttons %}
+
 {% if budget %}
   <div class="btn_wrapper">
     <a href="{% url debit_budget budget.id %}" class="btn_small">
@@ -29,54 +30,70 @@
 {% endblock %}
 
 {% block content %}
-<div id="content">
-  <div id="content_header"><h2>Rapport d'activité</h2></div>
-  {% if budget_lines.object_list %}
-    <table class="list">
-      <thead>
-        <th>budget</th>
-        <th>crédit</th>
-        <th>n° de cmde</th>
-        <th>date de l'acte</th>
-        <th>nature</th>
-        <th>tutelle</th>
-        <th>type de crédit</th>
-        <th>fournisseur</th>
-        <th>offre</th>
-        <th>désignation</th>
-        <th>ref</th>
-        <th>qté</th>
-        <th>PU</th>
-        <th>Prix HT total</th>
-        <th>Montant dispo</th>
-      </thead>
+
+{% regroup budget_lines.object_list by team as team_list %}
+
+{% for team in team_list %}
+  <div id="content" style="min-height:0">
+  <div id="content_header"><h2>Equipe {{ team.grouper }}</h2></div>
+  
+  {% regroup team.list by name as budget_list %}
+  
+  <table class="list">
+    <thead>
+      <th widht="50px">budget</th>
+      <th width="100px">crédit</th>
+      <th width="80px">n° de cmde</th>
+      <th width="100px">date de l'acte</th>
+      <th width="50px">nature</th>
+      <th width="50px">tutelle</th>
+      <th width="50px">type de crédit</th>
+      <th width="100px">fournisseur</th>
+      <th width="80px">offre</th>
+      <th>désignation</th>
+      <th width="50px">ref</th>
+      <th width="50px">qté</th>
+      <th width="50px">PU</th>
+      <th width="80px">Prix HT total</th>
+      <th width="80px">Montant dispo</th>
+    </thead>
       
-      <tbody>
-        {% for budget_line in budget_lines.object_list %}
-          <tr class="{% cycle 'even' 'odd' %}">
-             <td>{{ budget_line.name }}</td>
-             <td>{{ budget_line.credit|default:"" }}</td>
-             <td>{{ budget_line.number|default:"" }}</td>
-             <td>{{ budget_line.date|date }}</td>
-             <td>{{ budget_line.nature }}</td>
-             <td>{{ budget_line.get_budget_type_display|default:"" }}</td>
-             <td>{{ budget_line.credit_type|default:"" }}</td>
-             <td>{{ budget_line.provider|default:"" }}</td>
-             <td>{{ budget_line.offer|default:"" }}</td>
-             <td>{{ budget_line.product|default:"" }}</td>
-             <td>{{ budget_line.ref|default:"" }}</td>
-             <td>{{ budget_line.quantity|default:"" }}</td>
-             <td>{{ budget_line.product_price|default:"" }}</td>
-             <td>{{ budget_line.debit|default:"" }}</td>
-             <td>{{ budget_line.amount_left }}</td>
+    <tbody>
+      {% for budget in budget_list %}
+        {% if forloop.counter > 1 %}
+          <tr class="empty_row">
+            <td colspan="15"></td>
           </tr>
+        {% endif %}
+        
+        {% for budget_line in budget.list %}
+        <tr class="{% cycle 'even' 'odd' %}">
+          {% if forloop.counter == 1 %}
+            <td><strong>{{ budget.grouper }}</strong></td>
+          {% else %}
+            <td>{{ budget.grouper }}</td>
+          {% endif %}
+          <td>{{ budget_line.credit|default:"" }}</td>
+          <td>{{ budget_line.number|default:"" }}</td>
+          <td>{{ budget_line.date|date }}</td>
+          <td>{{ budget_line.nature }}</td>
+          <td>{{ budget_line.get_budget_type_display|default:"" }}</td>
+          <td>{{ budget_line.credit_type|default:"" }}</td>
+          <td>{{ budget_line.provider|default:"" }}</td>
+          <td>{{ budget_line.offer|default:"" }}</td>
+          <td>{{ budget_line.product|default:"" }}</td>
+          <td>{{ budget_line.ref|default:"" }}</td>
+          <td>{{ budget_line.quantity|default:"" }}</td>
+          <td>{{ budget_line.product_price|default:"" }}</td>
+          <td>{{ budget_line.debit|default:"" }}</td>
+          <td>{{ budget_line.get_amount_left }}</td>
+        </tr>
         {% endfor %}
-      </tbody>
-    </table>
-  {% else %}
-    <p>Aucune commande passée.</p>
-  {% endif %}
-</div>
+      {% endfor %}
+    </tbody>
+  </table>
+  </div>
+{% endfor %}
 {% pagination budget_lines %}
 
 {% endblock %}
